# ShapesRenderer

./: CMakeLists.txt  README.md  vcpkg.json
ShapesRenderer/: CMakeLists.txt  Camera.h  ShapesRenderer.cpp  ShapesRenderer.h
